@@ -18,6 +18,7 @@
         <dependency force="true" org="com.vaadin" name="vaadin" rev="6.6.6" conf="build->default"/>
         <dependency force="true" org="javax.servlet" name="servletapi" rev="3.0" conf="build->default"/>
         <dependency force="true" org="javax.validation" name="validation-api" rev="1.0.0.GA" conf="build->default"/>
+        <dependency force="true" org="net.java.dev.jna" name="jna" rev="3.4+" conf="build->core"/>
         <dependency force="true" org="net.sourceforge.jibx" name="jibx" rev="1.2.3" conf="build->runtime-xpp3,extras;jibx-bind->bind"/>
         <dependency force="true" org="net.sourceforge.java-readline" name="java-readline" rev="0.8.0" conf="build->default"/>
         <dependency force="true" org="org.jmock" name="jmock" rev="2.5.1" conf="build,test->core"/>
